<resources>

    <string name="app_name">Skill India</string>
    <string name="title_activity_app_hall">AppHallActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_panel">Panel</string>

    <!-- NavBar Header Strings -->
    <string name="profile_photo_desc">Profile photo of the logged in User</string>
    <string name="name_sample">Unsigned User</string>
    <string name="email_sample">user@usermail.com</string>

    <!-- Menu Strings -->
    <string name="about">About App</string>
    <string name="contribute">Contribute</string>
    <string name="gallery">Gallery</string>
    <string name="locate">Locate Centre</string>
    <string name="login">Login/Register</string>
    <string name="partner">Become Training Partner</string>
    <string name="contact">Contact Us</string>
    <string name="feedback">Report Issue</string>
    <string name="share">Share</string>
    <string name="joinUs">Join Us</string>
    <string name="communication">Communication</string>
    <string name="home">Home</string>

    <!--Player and About Content-->
    <string name="about_us_content">Skill India is a campaign launched by Prime Minister Narendra Damodardas Modi on 15 July 2015 which aim to train over 40 crore (400 million) people in India in different skills by 2022. It includes various initiatives of the government like "National Skill Development Mission", "National Policy for Skill Development and Entrepreneurship, 2015", "Pradhan Mantri Kaushal Vikas Yojana (PMKVY)" and the "Skill Loan scheme".</string>
    <string name="title_logo">CHALO KAAM KAREIN</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="image_people">Placeholder supporting image in about page for when app is without internet.</string>

    <!-- Misc Strings -->
    <string name="app_address">https://play.google.com/store/apps/details?id=co.ardulous.skillindia</string>


    <!--Activity Titles-->
    <string name="registerActivityName">Register-Skill India</string>

    <!--Register Activity & Login Fragment Content-->
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="required">*This field is required</string>
    <string name="register">Register</string>
    <string name="LogIn">Login</string>
    <string name="googleSignIn">Sign In with Google</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="signin">Sign In</string>
    <string name="mentor">Trainer</string>
    <string name="student">Student</string>
    <string name="registerMode">Register me as a:</string>
    <string name="or">OR</string>
    <string name="yourcode">Your Code Here</string>
    <string name="resend">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="template_phone">+9198xxxxxxxx</string>
    <string name="no_receive_code">Did not receive a code?</string>

    <!--InternetWarning-->
    <string name="internet_warn">No Internet Connection!!</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
