<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/bg">


    <ImageView
        android:id="@+id/profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:contentDescription="@string/profile_photo_desc"
        android:src="@drawable/user_logo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:text="@string/name_sample"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
        android:layout_marginStart="@dimen/nav_header_horizontal_spacing"
        android:text="@string/email_sample"
        android:textColor="#000000" />

</LinearLayout>
