<!--Serving as RegisterFragment-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.ardulous.skillindia.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/framelayout"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/internetWarn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="50dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/ic_warning_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internet_warn"
                android:textAlignment="center" />

            <Button
                android:id="@+id/retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/retry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUpWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/signup"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/firstname"
                        android:textColor="#616161"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/firstNameRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/required"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:visibility="gone" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:hint="@string/lastname"
                        android:textColor="#616161"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/lastNameRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/required"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:visibility="gone" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:textColor="#616161"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/phoneRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/required"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:visibility="gone" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#616161"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/passwordRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/required"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        android:hint="@string/ConfirmPassword"
                        android:inputType="textPassword"
                        android:textColor="#616161"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/confirmRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registerMode"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/student"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:checked="true"
                        android:layout_height="wrap_content"
                        android:text="@string/student"/>
                    <RadioButton
                        android:id="@+id/mentor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/mentor"/>
                </RadioGroup>
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="5dp"
                    android:layout_margin="16dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:padding="12dp"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                </android.support.v7.widget.CardView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/login"
                        android:textSize="@dimen/text_size_login_register"
                        android:layout_gravity="bottom"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/code_sent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/border"
            android:orientation="vertical">
            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/tick"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Code Sent"
                android:textAlignment="center"
                android:textSize="16sp"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/template_phone"
                android:textColor="#ffffff"
                android:digits="0123456789"
                android:textAlignment="center"
                android:id="@+id/phone_code_sent"
                android:background="@color/colorPrimary"/>

            <EditText
                android:id="@+id/code_sent_verification"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:digits="0123456789"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/yourcode"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/verify"
                android:id="@+id/verify_button"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:padding="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="4dp"
                android:text="@string/no_receive_code"
                android:textAlignment="center"/>
            <TextView
                android:layout_margin="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textAllCaps="true"
                android:text="@string/resend"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:id="@+id/resend_button"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </FrameLayout>

</ScrollView>
