<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="48dp"
    tools:context="co.ardulous.skillindia.LoginFragment">

    <LinearLayout
        android:id="@+id/internetWarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/ic_warning_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_warn"
            android:textAlignment="center" />
        <Button
            android:id="@+id/retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/retry"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SignInWidget"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:text="@string/signin"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:hint="@string/phone"
                android:digits="0123456789"
                android:textSize="16sp"
                android:inputType="phone"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/forgotPassword"
            android:textAlignment="viewEnd"
            android:textSize="12sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="16dp"
            android:text="@string/LogIn"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

    <!--<android.support.v7.widget.CardView
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </android.support.v7.widget.CardView>-->

    <TextView
        android:text="OR"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/googleg_standard_color_18" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/googleSignIn"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register"
            android:textSize="@dimen/text_size_login_register"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

</LinearLayout>
